feat: add more styles. Mobile first version. Some refactoring

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>An Yury</title>
+    <title>An Yuri</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -47,36 +47,16 @@
                 <div class="skills-box-level">
                   <ul>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_2.png" alt="stars level 2" />
                     </li>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_1.png" alt="stars level 1" />
                     </li>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_1.png" alt="stars level 1" />
                     </li>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_1.png" alt="stars level 1" />
                     </li>
                   </ul>
                 </div>
@@ -86,47 +66,27 @@
             <div class="backend">
               <h4>Backend</h4>
               <div class="skills-box">
-                <div>
+                <div class="skills-box-list">
                   <ul>
                     <li>Node.js</li>
                     <li>Express.js</li>
                     <li>Nest.js</li>
-                    <li>PHP</li>
+                    <li>Docker</li>
                   </ul>
                 </div>
-                <div>
+                <div class="skills-box-level">
                   <ul>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_2.png" alt="stars level 2" />
                     </li>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_2.png" alt="stars level 2" />
                     </li>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_1.png" alt="stars level 1" />
                     </li>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_1.png" alt="stars level 1" />
                     </li>
                   </ul>
                 </div>
@@ -136,7 +96,7 @@
             <div class="tools">
               <h4>Tools</h4>
               <div class="skills-box">
-                <div>
+                <div class="skills-box-list">
                   <ul>
                     <li>Git and GitHub</li>
                     <li>Webpack</li>
@@ -144,39 +104,19 @@
                     <li>Figma</li>
                   </ul>
                 </div>
-                <div>
+                <div class="skills-box-level">
                   <ul>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_2.png" alt="stars level 2" />
                     </li>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_1.png" alt="stars level 1" />
                     </li>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_1.png" alt="stars level 1" />
                     </li>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_1.png" alt="stars level 1" />
                     </li>
                   </ul>
                 </div>
@@ -186,47 +126,27 @@
             <div class="other">
               <h4>Other</h4>
               <div class="skills-box">
-                <div>
+                <div class="skills-box-list">
                   <ul>
                     <li>MongoDB</li>
+                    <li>Bootstrap</li>
                     <li>CMS Strapi</li>
-                    <li>something</li>
-                    <li>something</li>
+                    <li>Jest</li>
                   </ul>
                 </div>
-                <div>
+                <div class="skills-box-level">
                   <ul>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_1.png" alt="stars level 1" />
                     </li>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_1.png" alt="stars level 1" />
                     </li>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_1.png" alt="stars level 1" />
                     </li>
                     <li>
-                      <img
-                        src="icons/star-yellow.svg"
-                        alt="star"
-                        width="16"
-                        height="16"
-                      />
+                      <img src="icons/level_1.png" alt="stars level 1" />
                     </li>
                   </ul>
                 </div>
@@ -257,36 +177,38 @@
                 >
               </li>
             </ul>
-            <h4>The student of next courses:</h4>
-            <ul>
-              <li>
-                <a href="https://rs.school/js/"
-                  >RSS School JavaScript/Front-end</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://www.udemy.com/course/the-complete-web-development-bootcamp/"
-                  >Udemy: The Complete 2021 Web Development Bootcamp</a
-                >
-              </li>
-              <li>
-                <a href="https://www.udemy.com/course/webdeveloper/"
-                  >Udemy: WEB Developer 2021</a
-                >
-              </li>
-              <li>
-                <a href="https://www.udemy.com/course/javascript_full/"
-                  >Udemy: The complete JavaScript + React course - From scratch
-                  to results</a
-                >
-              </li>
-            </ul>
+            <details>
+              <summary>Currently a student of the courses</summary>
+              <ul>
+                <li>
+                  <a href="https://rs.school/js/"
+                    >RSS School JavaScript/Front-end</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://www.udemy.com/course/the-complete-web-development-bootcamp/"
+                    >Udemy: The Complete 2021 Web Development Bootcamp</a
+                  >
+                </li>
+                <li>
+                  <a href="https://www.udemy.com/course/webdeveloper/"
+                    >Udemy: WEB Developer 2021</a
+                  >
+                </li>
+                <li>
+                  <a href="https://www.udemy.com/course/javascript_full/"
+                    >Udemy: The complete JavaScript + React course - From
+                    scratch to results</a
+                  >
+                </li>
+              </ul>
+            </details>
           </div>
 
-          <h3>About me</h3>
           <div class="about">
             <article class="about-text">
+              <h3>About me</h3>
               <p>
                 I have an economic education. Almost 10 years I was an
                 individual entrepreneur in agriculture. After some time I
@@ -298,10 +220,25 @@
             </article>
           </div>
         </section>
+        <footer>
+          <span
+            ><a href="https://github.com/yuriandev"
+              ><img
+                src="icons/github.svg"
+                alt="github-icon"
+                height="40"
+                width="40" /></a
+          ></span>
+          <span
+            ><a href="https://rs.school/js/" target="_blank"
+              ><img
+                src="icons/rs_school_js.svg"
+                alt="RSSchool-Logo"
+                height="40" /></a
+          ></span>
+          <span><time>2021</time></span>
+        </footer>
       </main>
-      <footer>
-        <p>lalala</p>
-      </footer>
     </div>
   </body>
 </html>
