refactor: mobile first version. Change some styles. Almost finish

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
         <section class="photo-contacts">
           <div class="photo-container">
             <figure>
-              <img class="photo" src="/img/MyPhoto.jpg" alt="MyPhoto" />
-              <figcaption class="photo-description">Happy junior</figcaption>
+              <img
+                class="photo"
+                src="/img/MyPhoto.jpg"
+                alt="MyPhoto"
+                title="Happy junior"
+              />
             </figure>
           </div>
           <div class="contacts-container">
-            <h3>Contacts</h3>
+            <h3 class="contacts-header">Contacts</h3>
             <ul>
               <li>Phone: +7-968-271-73-73</li>
               <li>Email: yuriandev@gmail.com</li>
@@ -31,7 +35,7 @@
             <h1 class="vacation">Junior JavaScript developer</h1>
             <h2 class="myName">An Yuri Olegovich</h2>
           </div>
-          <h3>My Skills</h3>
+          <h3 class="skills-header">My Skills</h3>
           <div class="skills">
             <div class="frontend">
               <h4>Frontend</h4>
@@ -153,27 +157,53 @@
               </div>
             </div>
           </div>
-          <h3>Languages</h3>
+          <h3 class="examples-header">Study projects</h3>
+          <div class="examples">
+            <ul>
+              <li>
+                <a href="https://github.com/yuriandev/Form-validator"
+                  >Form validator</a
+                >
+              </li>
+              <li>
+                <a href="https://github.com/yuriandev/Menu-slider-modal-DOM"
+                  >Hamburger menu and modal window</a
+                >
+              </li>
+              <li>
+                <a href="https://github.com/yuriandev/Exchange-rate-calculator"
+                  >Exchange rate</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <h3 class="languages-header">Languages</h3>
           <div class="languages">
             <ul>
               <li>Russian (native)</li>
               <li>English (B1 level)</li>
             </ul>
           </div>
-          <h3>Education</h3>
+          <h3 class="education-header">Education</h3>
           <div class="education">
-            <h4>Certificates:</h4>
+            <h4>Graduated</h4>
+            <ul>
+              <li>2005 Financial Academy under the Government of Russia</li>
+            </ul>
+
+            <h4 class="certificates-header">Certificates</h4>
             <ul>
               <li>
                 <a
                   href="https://www.freecodecamp.org/certification/fcc94ed5d3e-8586-4cc9-85dd-05daec8058d7/responsive-web-design"
-                  >freecodecamp.org: Responsive web design</a
+                  >2020 freecodecamp.org: Responsive web design</a
                 >
               </li>
               <li>
                 <a
                   href="https://assets.htmlacademy.ru/certificates/intensive/26/233557.pdf?1475905245&_ga=2.32937786.563828326.1620821427-1700225162.1620821427"
-                  >HTML Academy: HTML & CSS basic course</a
+                  >2016 HTML Academy: HTML & CSS basic course</a
                 >
               </li>
             </ul>
@@ -208,7 +238,7 @@
 
           <div class="about">
             <article class="about-text">
-              <h3>About me</h3>
+              <h3 class="about-header">About me</h3>
               <p>
                 I have an economic education. Almost 10 years I was an
                 individual entrepreneur in agriculture. After some time I
@@ -220,7 +250,7 @@
             </article>
           </div>
         </section>
-        <footer>
+        <footer class="footer">
           <span
             ><a href="https://github.com/yuriandev"
               ><img
