feat: add desktop version

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </ul>
           </div>
         </section>
-        <section>
+        <section class="main-content">
           <div class="intro">
             <h1 class="vacation">Junior JavaScript developer</h1>
             <h2 class="myName">An Yuri Olegovich</h2>
