--- a/index.html
+++ b/index.html
@@ -245,14 +245,9 @@
                 individual entrepreneur. Now I'm studying and improving my
                 skills in web-development. Some day I wish to be a full-stack
                 JavaScript developer, but currently I'm discovering the frontend
-                first. A little more information you can see in my video below.
+                first. A little more information you can see in my
+                <a href="https://youtu.be/F_ERcu2MFcc">video</a>.
               </p>
-              <iframe
-                src="https://youtu.be/F_ERcu2MFcc"
-                title="YouTube video player"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
             </article>
           </div>
           <div class="hobbies"></div>
