fix: fix some code in html and css

--- a/index.html
+++ b/index.html
@@ -248,6 +248,14 @@
                 first. A little more information you can see in my
                 <a href="https://youtu.be/F_ERcu2MFcc">video</a>.
               </p>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/F_ERcu2MFcc"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
             </article>
           </div>
           <div class="hobbies"></div>
