--- a/index.html
+++ b/index.html
@@ -45,9 +45,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contacts">Contacts</a>
-            </li>
           </ul>
           <div class="hamburger">
             <span class="bar"></span>
@@ -127,7 +124,7 @@ function factorial(n) {
             <button class="left"><i class="fas fa-chevron-left"></i></button>
             <div class="slider">
               <figure class="slide active">
-                <figcaption><h4>Custom video player</h4></figcaption>
+                <figcaption><h4>Video player</h4></figcaption>
                 <a
                   href="https://rolling-scopes-school.github.io/yuriandev-JSFEPRESCHOOL/custom-video-player/"
                   target="_blank"
@@ -136,11 +133,11 @@ function factorial(n) {
                     src="images/projects/project-video-player.jpg"
                     alt="Screenshot of a video player project"
                 /></a>
-
-                <p>HTML5, CSS3, JavaScript</p>
+                <p>Simple custom UI of video player with hotkeys</p>
+                <p>Used: HTML5, CSS3, JS</p>
               </figure>
               <figure class="slide">
-                <figcaption><h4>Vertical/horizontal slider</h4></figcaption>
+                <figcaption><h4>Slider</h4></figcaption>
                 <a
                   href="https://rolling-scopes-school.github.io/yuriandev-JSFEPRESCHOOL/vertical-slider/"
                   target="_blank"
@@ -149,7 +146,8 @@ function factorial(n) {
                     src="images/projects/project-slider.jpg"
                     alt="Screenshot of a slider project"
                 /></a>
-                <p>HTML5, CSS3, JavaScript</p>
+                <p>Slider with horizontal and vertical directions</p>
+                <p>Used: HTML5, CSS3, JS</p>
               </figure>
             </div>
 
@@ -198,23 +196,22 @@ function factorial(n) {
           </div>
         </section>
         <section id="about" class="about">
-          <h2>Some words about me</h2>
-          <div>
+          <h2>About me</h2>
+          <div class="video-box">
             <p>
               I'm a switcher who is changing his life and field of activity for
-              web-development. My main goal is to help people and their
-              businesses to solve the problems in the web.
+              web-development. I wish to be a full-stack JavaScript developer,
+              but currently I'm discovering frontend first. My main goal is to
+              help people and their businesses to resolve problems on the web.
             </p>
 
             <iframe
-              src="https://www.youtube.com/embed/HwVh8pmOot4"
+              src="https://www.youtube.com/embed/sbNzbOuWw1Q"
               title="YouTube video player"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
           </div>
-        </section>
-        <section id="contacts" class="contacts">
           <h3>Contacts:</h3>
           <ul class="contacts-list">
             <li>Telegram: @Yurian126</li>
@@ -229,13 +226,19 @@ function factorial(n) {
       <footer>
         <div class="footer-icons">
           <div class="github-codewars-icons">
-            <a href="https://github.com/yuriandev" target="_blank"
+            <a
+              class="github-icon"
+              href="https://github.com/yuriandev"
+              target="_blank"
               ><img
                 width="35"
                 src="images/icons/github-icon.svg"
                 alt="Github icon"
             /></a>
-            <a href="https://www.codewars.com/users/yuriandev" target="_blank"
+            <a
+              class="cw-icon"
+              href="https://www.codewars.com/users/yuriandev"
+              target="_blank"
               ><img
                 width="35"
                 src="images/icons/codewars.svg"
@@ -244,7 +247,7 @@ function factorial(n) {
           </div>
 
           <span>2021</span>
-          <a href="https://rs.school/js/" target="_blank"
+          <a class="rs-icon" href="https://rs.school/js/" target="_blank"
             ><img
               width="100"
               src="images/icons/rs_school_js.svg"
