--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My CV</title>
+    <title>CV</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -204,7 +204,7 @@ function factorial(n) {
               but currently I'm discovering frontend first. My main goal is to
               help people and their businesses to resolve problems on the web.
             </p>
-            
+
             <iframe
               src="https://www.youtube.com/embed/sbNzbOuWw1Q"
               title="YouTube video player"
