fix: delete self-close tags for the study task. Add minor changes in css

--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+      referrerpolicy="no-referrer">
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/default.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/default.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"></script>
     <script>
       hljs.highlightAll();
     </script>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="#" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="#">
     <script src="script.js" defer></script>
   </head>
   <body>
@@ -58,7 +56,7 @@
           <h1>Hello!</h1>
           <article class="welcome__article">
             <figure>
-              <img src="images/photo.jpeg" alt="My photo" />
+              <img src="images/photo.jpeg" alt="My photo">
               <figcaption>
                 <h3>I'm Yuri</h3>
               </figcaption>
@@ -75,8 +73,8 @@
               <li class="skill">css</li>
               <li class="skill">javascript</li>
               <li class="skill">git</li>
-              <li class="skill">figma</li>
-              <li class="skill">node.js</li>
+              <li class="skill">typescript</li>
+              <li class="skill">angular</li>
             </ul>
             <div class="skills-levels">
               <div class="level-box">
@@ -92,18 +90,17 @@
                 <div class="level git">50%</div>
               </div>
               <div class="level-box">
-                <div class="level figma">20%</div>
+                <div class="level typescript">40%</div>
               </div>
               <div class="level-box">
-                <div class="level node">15%</div>
+                <div class="level angular">7%</div>
               </div>
             </div>
           </div>
           <h3>Languages</h3>
           <ul class="language-list">
             <li>English (B1)</li>
-            <li>Russian (native)</li>
-            <li>Korean (A1)</li>
+            <li>Russian (native)</li>            
           </ul>
         </section>
         <section id="portfolio" class="portfolio">
@@ -121,7 +118,9 @@ function factorial(n) {
           </div>
           <h3>Study projects</h3>
           <div class="slider-container">
-            <button class="left"><i class="fas fa-chevron-left"></i></button>
+            <button class="left" type="button">
+              <i class="fas fa-chevron-left"></i>
+            </button>
             <div class="slider">
               <figure class="slide active">
                 <figcaption><h4>Video player</h4></figcaption>
@@ -131,8 +130,8 @@ function factorial(n) {
                 >
                   <img
                     src="images/projects/project-video-player.jpg"
-                    alt="Screenshot of a video player project"
-                /></a>
+                    alt="Screenshot of a video player project">
+                  </a>
                 <p>Simple custom UI of video player with hotkeys</p>
                 <p>Used: HTML5, CSS3, JS</p>
               </figure>
@@ -144,14 +143,14 @@ function factorial(n) {
                 >
                   <img
                     src="images/projects/project-slider.jpg"
-                    alt="Screenshot of a slider project"
-                /></a>
+                    alt="Screenshot of a slider project">
+                  </a>
                 <p>Slider with horizontal and vertical directions</p>
                 <p>Used: HTML5, CSS3, JS</p>
               </figure>
             </div>
 
-            <button class="right buttons">
+            <button class="right buttons" type="button">
               <i class="fas fa-chevron-right"></i>
             </button>
           </div>
@@ -179,8 +178,8 @@ function factorial(n) {
               >
                 <img
                   src="images/Cert/RS-Cert0.jpg"
-                  alt="RS School certificate stage 0"
-              /></a>
+                  alt="RS School certificate stage 0">
+                </a>
             </figure>
             <figure class="cert-box">
               <figcaption>FreeCodeCamp</figcaption>
@@ -190,8 +189,8 @@ function factorial(n) {
               >
                 <img
                   src="images/Cert/fc.jpg"
-                  alt="FreeCodeCamp Web Certificate"
-              /></a>
+                  alt="FreeCodeCamp Web Certificate">
+                </a>
             </figure>
           </div>
         </section>
@@ -233,8 +232,8 @@ function factorial(n) {
               ><img
                 width="35"
                 src="images/icons/github-icon.svg"
-                alt="Github icon"
-            /></a>
+                alt="Github icon">
+              </a>
             <a
               class="cw-icon"
               href="https://www.codewars.com/users/yuriandev"
@@ -242,17 +241,17 @@ function factorial(n) {
               ><img
                 width="35"
                 src="images/icons/codewars.svg"
-                alt="Codewars icon"
-            /></a>
+                alt="Codewars icon">
+              </a>
           </div>
 
-          <span>2021</span>
+          <span>2022</span>
           <a class="rs-icon" href="https://rs.school/js/" target="_blank"
             ><img
               width="100"
               src="images/icons/rs_school_js.svg"
-              alt="RS School icon"
-          /></a>
+              alt="RS School icon">
+            </a>
         </div>
       </footer>
     </div>
