feat: remove trailing whitespaces

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <h3>Languages</h3>
           <ul class="language-list">
             <li>English (B1)</li>
-            <li>Russian (native)</li>            
+            <li>Russian (native)</li>
           </ul>
         </section>
         <section id="portfolio" class="portfolio">
@@ -118,7 +118,7 @@ function factorial(n) {
           </div>
           <h3>Study projects</h3>
           <div class="slider-container">
-            <button class="left" type="button">
+            <button class="left" type="button">Prev
               <i class="fas fa-chevron-left"></i>
             </button>
             <div class="slider">
@@ -150,7 +150,7 @@ function factorial(n) {
               </figure>
             </div>
 
-            <button class="right buttons" type="button">
+            <button class="right buttons" type="button">Next
               <i class="fas fa-chevron-right"></i>
             </button>
           </div>
