feat: change some information in footer and contacts

--- a/index.html
+++ b/index.html
@@ -217,8 +217,7 @@ function factorial(n) {
             <li>Discord: Yurik#6596</li>
             <li>Skype: Yurikan82</li>
             <li>Email: yuriandev@gmail.com</li>
-            <li><a href="https://github.com/yuriandev">Github</a></li>
-            <li></li>
+            <!-- <li><a href="https://github.com/yuriandev">Github</a></li> -->
           </ul>
         </section>
       </main>
@@ -233,19 +232,21 @@ function factorial(n) {
                 width="35"
                 src="images/icons/github-icon.svg"
                 alt="Github icon">
+                <span>Github</span>
               </a>
             <a
               class="cw-icon"
-              href="https://www.codewars.com/users/yuriandev"
+              href="https://www.codewars.com/users/rsschool_462b39f854563fff"
               target="_blank"
               ><img
                 width="35"
                 src="images/icons/codewars.svg"
                 alt="Codewars icon">
+                <span>Codewars</span>
               </a>
           </div>
 
-          <span>2022</span>
+          <span>October 2022</span>
           <a class="rs-icon" href="https://rs.school/js/" target="_blank"
             ><img
               width="100"
