fix: change link for the course, add minor styles

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ function factorial(n) {
               href="https://github.com/yuriandev"
               target="_blank"
               ><img
-                width="35"
+                width="16"
                 src="images/icons/github-icon.svg"
                 alt="Github icon">
                 <span>Github</span>
@@ -239,7 +239,7 @@ function factorial(n) {
               href="https://www.codewars.com/users/rsschool_462b39f854563fff"
               target="_blank"
               ><img
-                width="35"
+                width="16"
                 src="images/icons/codewars.svg"
                 alt="Codewars icon">
                 <span>Codewars</span>
@@ -247,7 +247,7 @@ function factorial(n) {
           </div>
 
           <span>October 2022</span>
-          <a class="rs-icon" href="https://rs.school/js/" target="_blank"
+          <a class="rs-icon" href="https://rs.school/js-en/" target="_blank"
             ><img
               width="100"
               src="images/icons/rs_school_js.svg"
